modif style rank counter

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -60,19 +60,24 @@
     <h1>Bienvenue sur Statmess</h1>
     <div class="indicators">
       <div class="compteur">
-        <img src="https://image.flaticon.com/icons/svg/69/69379.svg"/>
-        <p style="margin-top: 6%;">Cette page a été visitée <b>{{nbrVisite}}</b> fois</p>
+        <img src="https://image.flaticon.com/icons/svg/148/148718.svg"/>
+        <p style="text-align:center;">Cette page a été visitée <b style="color:rgb(250, 138, 47);">{{nbrVisite}}</b> fois</p>
       </div>
-      <div class="rating-holder">
-        <div class="c-rating c-rating--big" data-rating-value="4.5">
-          <button>1</button>
-          <button>2</button>
-          <button>3</button>
-          <button>4</button>
-          <button>5</button>
+      <div>
+        <p>Vos notes</p>
+        <div style="display:flex">
+          <div class="rating-holder">
+            <div class="c-rating c-rating--big" data-rating-value="4.5">
+              <button>1</button>
+              <button>2</button>
+              <button>3</button>
+              <button>4</button>
+              <button>5</button>
+            </div>
+          </div>
+          <p style="margin-top:auto;">({{nbrVote}})</p>
         </div>
       </div>
-      <p>({{nbrVote}})</p>
   </div>
     <hr class="overview">
     <p>Notre site vous permet d’analyser l’ensemble de vos messages pour en faire ressortir la personne que vous êtes vraiment.</p>
@@ -178,19 +183,19 @@
       <a href="https://www.linkedin.com/in/hugo-pillet-a29689152/" style="text-decoration:none;" target="_blank">
       <div class="oneLinkedin">
         <img src="https://image.flaticon.com/icons/svg/124/124011.svg" class="logoLinkedin">
-        <h3 style="margin-top:1%; color:black; ">Hugo Pillet</h3>
+        <h3 style="margin-top:1%; color:black;  font-weight:unset;">Hugo Pillet</h3>
       </div>
       </a>
       <a href="https://www.linkedin.com/in/paul-tondereau-674552150/" style="text-decoration:none;" target="_blank">
       <div class="oneLinkedin">
         <img src="https://image.flaticon.com/icons/svg/124/124011.svg" class="logoLinkedin">
-        <h3 style="margin-top:1%; color:black; text-decoration:none; ">Paul Tondereau</h3>
+        <h3 style="margin-top:1%; color:black; text-decoration:none; font-weight:unset; ">Paul Tondereau</h3>
       </div>
       </a>
       <a href="https://www.linkedin.com/in/paulwlf/" style="text-decoration:none;" target="_blank">
       <div class="oneLinkedin">
         <img src="https://image.flaticon.com/icons/svg/124/124011.svg" class="logoLinkedin">
-        <h3 style="margin-top:1%; color:black; text-decoration:none; ">Paul Wolf</h3>
+        <h3 style="margin-top:1%; color:black; text-decoration:none; font-weight:unset; ">Paul Wolf</h3>
       </div>
       </a>
     </div>
