style après 1er test

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -183,7 +183,7 @@
     <div style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
       <h1>Enjoy StatMess !</h1>
       <hr class="overview">
-      <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal ;)</p>
+      <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal !</p>
       <div class="imgSide">
         <img src="https://zupimages.net/up/19/21/3kzt.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
       </div>
