--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -9,7 +9,7 @@
   </div>
 <div class="instruction">
   <h3>Quelques instructions :</h3>
-  <p>- <b>Ne pas cliquer sur le bouton "Précédent" ou "Refraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
+  <p>- <b>Ne pas cliquer sur le bouton "Précédent" ou "Rafraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
   <p>- Utilisez le navigateur <b>Chrome</b>.</p>
   <p>- Consultez les <b>CGU</b> en bas à droite de la page pour plus d'informations.</p>
   <hr style="margin-bottom: 0.5%; margin-top: 0.5%;" class="overview">
