--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 p {
-  font-family:Roboto;
+  font-family:R 'Roboto', sans-serif;
 }
 
 img{
@@ -45,6 +45,7 @@ img{
   background-color:  #EEEEEE;
   color: rgb(51, 51, 51);
   min-height:97vh;
+  font-family:'Roboto', sans-serif;
 }
 
 .body{
