--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -166,7 +166,7 @@
             <img src="https://image.flaticon.com/icons/svg/138/138295.svg" class="icon"/>
           </div>
           <div class="sideTextBoxOverview">
-            <p class="numberBox">{{timeOnMessenger}}</p>
+            <p style="margin-bottom:15%;" class="numberBox">{{timeOnMessenger}}</p>
             <p class="descriptionBox">Temps total passé sur messenger</p>
           </div>
         </div>
