--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -228,8 +228,8 @@ img {
 }
 
 .numberBox{
-  color : rgba(40, 37, 88, 0.815);
-  height:3vw;
+  color : #1A1837;
+  height:15%;
   font-weight : bold;
   font-size : 1.5em;
   text-align : center;
