--- a/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
+++ b/src/app/home-pannel-page/convs-pannel/one-conv-stats/overview-stat/overview-stat.component.html
@@ -37,8 +37,8 @@
           </div>
         </div>
         <div style="display:flex; height:8vh; padding-left: 2%;">
-            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -5%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
-            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre maximum de jours sans parler</h5>
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -5%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw; font-size: 0.6em; text-align: left; margin-left: 5%;">Nombre maximum de jours sans parler</h5>
         </div>
       </div>
 
@@ -52,9 +52,9 @@
             <p>{{currentStreak}}</p>
           </div>
         </div>
-        <div style="display:flex; height:8vh; padding-left: 2%;">
-            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
-            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre de jours d'affilés pendant lesquels vous avez parlé à partir de maintenant</h5>
+        <div style="display:flex; height:8vh; width:91%;">
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw; font-size: 0.6em; text-align: left; margin-left: 5%;">Nombre de jours d'affilés pendant lesquels vous avez parlé à partir de maintenant</h5>
           </div>
       </div>
 
@@ -69,8 +69,8 @@
           </div>
         </div>
         <div style="display:flex; height:8vh; padding-left: 2%;">
-            <img style="width: 2vw; height: 2vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
-            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;">Nombre maximum de jours d'affilés pendant lesquels vous avez parlé</h5>
+            <img style="width: 2vw; height: 1.5vh; margin-left:0; margin-right: -8%;" src="https://image.flaticon.com/icons/svg/131/131917.svg"/>
+            <h5 style="margin-top:0;font-style: italic; color:#BFBFBF;width: 15vw;font-size: 0.6em;">Nombre maximum de jours d'affilés pendant lesquels vous avez parlé</h5>
           </div>
       </div>
 
