--- a/src/app/cgu/cgu.component.html
+++ b/src/app/cgu/cgu.component.html
@@ -1,9 +1,9 @@
 <div class="blockTextCGU">
-  <h2>Conditions générales d'utilisation du site Statmess</h2> 
+  <h2>Conditions générales d'utilisation du site SightMess</h2> 
   
   <h1>ARTICLE 1 : Objet</h1>
   
-  <p>Les présentes « conditions générales d'utilisation » ont pour objet l'encadrement juridique de l’utilisation du site Statmess et de ses services.</p>
+  <p>Les présentes « conditions générales d'utilisation » ont pour objet l'encadrement juridique de l’utilisation du site SightMess et de ses services.</p>
   
   <p>Ce contrat est conclu entre :</p>
   
@@ -17,12 +17,12 @@
   
   <p>Pour les personnes physiques et morales:</p>
   
-  <p>Le site Statmess est édité par trois étudiants de l’Ecole Centrale de Marseille dénommés  Hugo Pillet, Paul Tondereau et Paul Wolf, domiciliés au 1 place Sadi-Carnot 13002 Marseille.</p>
+  <p>Le site SightMess est édité par trois étudiants de l’Ecole Centrale de Marseille dénommés  Hugo Pillet, Paul Tondereau et Paul Wolf, domiciliés au 1 place Sadi-Carnot 13002 Marseille.</p>
   
   
   <h1>ARTICLE 3 : accès aux services</h1>
   
-  <p>L’Utilisateur du site Statmess a accès aux services suivants :</p>
+  <p>L’Utilisateur du site SightMess a accès aux services suivants :</p>
   <p>•  Consultation de statistiques relatives aux conversations Messenger de l’utilisateur</p>
   <p>•  Consultation de statistiques relatives aux comportements de l’utilisateur dans son utilisation du service Messenger </p>
   <p>•   Consultation d’un profil dressé à partir des comportements de l’utilisateur dans son utilisation du service Messenger</p>
@@ -38,7 +38,7 @@
   
   Le mot de passe de l’Utilisateur doit rester secret. En cas de divulgation de mot de passe, l’Éditeur décline toute responsabilité.
   
-  L’Utilisateur assume l’entière responsabilité de l’utilisation qu’il fait des informations et contenus présents sur le site Statmess.
+  L’Utilisateur assume l’entière responsabilité de l’utilisation qu’il fait des informations et contenus présents sur le site SightMess.
   
   Tout usage du service par l'Utilisateur ayant directement ou indirectement pour conséquence des dommages doit faire l'objet d'une indemnisation au profit du site.
   
@@ -58,13 +58,13 @@
   
   De même, la responsabilité du site ne peut être engagée en cas de force majeure ou du fait imprévisible et insurmontable d'un tiers.
   
-  Le site Statmess s'engage à mettre en œuvre tous les moyens nécessaires pour garantir la sécurité et la confidentialité des données. Toutefois, il n’apporte pas une garantie de sécurité totale.
+  Le site SightMess s'engage à mettre en œuvre tous les moyens nécessaires pour garantir la sécurité et la confidentialité des données. Toutefois, il n’apporte pas une garantie de sécurité totale.
   
   L’Éditeur se réserve la faculté d’une non-garantie de la fiabilité des sources, bien que les informations diffusées sur le site soient réputées fiables.</p>
   
   <h1>ARTICLE 6 : Propriété intellectuelle</h1>
   
-  <p>Les contenus du site Statmess (logos, textes, éléments graphiques, vidéos, etc.) sont protégés par le droit d’auteur, en vertu du Code de la propriété intellectuelle.
+  <p>Les contenus du site SightMess (logos, textes, éléments graphiques, vidéos, etc.) sont protégés par le droit d’auteur, en vertu du Code de la propriété intellectuelle.
   
   L’Utilisateur devra obtenir l’autorisation de l’éditeur du site avant toute reproduction, copie ou publication de ces différents contenus.
   
@@ -79,25 +79,25 @@
   
   <p>L’Utilisateur doit obligatoirement fournir des informations personnelles pour procéder à l’utilisation des services du site.
   
-  Statmess garantit le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.
+  SightMess garantit le respect de la vie privée de l’utilisateur, conformément à la loi n°78-17 du 6 janvier 1978 relative à l'informatique, aux fichiers et aux libertés.
     
   En vertu des articles 39 et 40 de la loi en date du 6 janvier 1978, l'Utilisateur dispose d'un droit d'accès, de rectification, de suppression et d'opposition de ses données personnelles. L'Utilisateur exerce ce droit via :</p>
   
   <p>•   Un formulaire de contact ;</p>
-  <p>•   Par mail à statmess@gmail.com ;</p>
+  <p>•   Par mail à SightMess@gmail.com ;</p>
   <p>•   Par voie postale au 1 Place Sadi-Carnot 13002 Marseille.</p>
   
   
   <h1>ARTICLE 8 : Liens hypertextes</h1>
   
-  <p>Les domaines vers lesquels mènent les liens hypertextes présents sur le site n’engagent pas la responsabilité de l’Éditeur de Statmess, qui n’a pas de contrôle sur ces liens.
+  <p>Les domaines vers lesquels mènent les liens hypertextes présents sur le site n’engagent pas la responsabilité de l’Éditeur de SightMess, qui n’a pas de contrôle sur ces liens.
   
-  Il est possible pour un tiers de créer un lien vers une page du site Statmess sans autorisation expresse de l’éditeur.</p>
+  Il est possible pour un tiers de créer un lien vers une page du site SightMess sans autorisation expresse de l’éditeur.</p>
   
   
   <h1>ARTICLE 9 : Évolution des conditions générales d’utilisation</h1>
   
-  <p>Le site Statmess se réserve le droit de modifier les clauses de ces conditions générales d’utilisation à tout moment et sans justification.</p>
+  <p>Le site SightMess se réserve le droit de modifier les clauses de ces conditions générales d’utilisation à tout moment et sans justification.</p>
   
   
   <h1>ARTICLE 10 : Durée du contrat</h1>
