--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -596,7 +596,7 @@ html,body {
 
 .card{
   width: 17vw;
-  height: 45vh;
+  padding-bottom: 2vh;
 
   background:white;
   box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
