--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -789,7 +789,7 @@ lastDateSuggestBestContact{
   height : 20vh;
 }
 
-#statmessLogoButton{
+#SightMessLogoButton{
   height: 3vh;
   padding-right: 1vh;
 }
