--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -5,14 +5,14 @@
     <label class="close">close</label>
   </div>
   <h1 style="margin-left: 11%;" *ngIf="!isRated">Donnez votre avis !</h1>
-  <p *ngIf="!isRated">Que pensez vous de StatMess ?</p>
+  <p *ngIf="!isRated">Que pensez vous de SightMess ?</p>
   <div class="rating-holder">
     <div *ngIf="!isRated" class="c-rating c-rating--big" data-rating-value="0">
-      <button (click)=rateStatMess(1)>1</button>
-      <button (click)=rateStatMess(2)>2</button>
-      <button (click)=rateStatMess(3)>3</button>
-      <button (click)=rateStatMess(4)>4</button>
-      <button (click)=rateStatMess(5)>5</button>
+      <button (click)=rateSightMess(1)>1</button>
+      <button (click)=rateSightMess(2)>2</button>
+      <button (click)=rateSightMess(3)>3</button>
+      <button (click)=rateSightMess(4)>4</button>
+      <button (click)=rateSightMess(5)>5</button>
     </div>
   </div>
   <p *ngIf="isRated" style="margin-top: 9%;font-size: 3em;">Merci !</p>
@@ -24,7 +24,7 @@
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
 				<span>Bienvenue sur</span> 
-				<span>StatMess</span>
+				<span>SightMess</span>
 			</div>
 		</div>
 		<div class="untitled__slide">
@@ -57,7 +57,7 @@
 <div class="uploadZone" *ngIf="!isZipLoaded && !isLoading">
   
   <div class="bienvenue">
-    <h1>Bienvenue sur Statmess</h1>
+    <h1>Bienvenue sur SightMess</h1>
     <div class="indicators">
       <div class="compteur">
         <img src="https://image.flaticon.com/icons/svg/148/148718.svg"/>
@@ -101,7 +101,7 @@
       <h3>Fonctionne sans internet</h3>
       <p>Nous ne stockons aucune de vos données personnelles.</p>
       <p>Seul vous avez accès aux informations affichées.</p> 
-      <p>Statmess fonctionne localement, vous pouvez donc couper Internet !</p>
+      <p>SightMess fonctionne localement, vous pouvez donc couper Internet !</p>
     </div>
   </div>
   <div class="lancezV">
@@ -169,7 +169,7 @@
     </div>
     <div class="oneStep">
       <div class="textSide2" style="margin-right:1%">
-        <h1>5. Lancez l'analyse Statmess !</h1>
+        <h1>5. Lancez l'analyse SightMess !</h1>
         <hr class="overview">
         <p>Vous n’avez plus qu’à sélectionner votre dossier</p>
         <p>Et... <b>C’est parti !</b></p>
@@ -181,14 +181,14 @@
       </div>
     </div>
     <div style="box-shadow : 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);">
-      <h1>Enjoy StatMess !</h1>
+      <h1>Enjoy SightMess !</h1>
       <hr class="overview">
       <p style="text-align:left">PS : Sur Chrome, vous aurez ce message, c'est normal !</p>
       <div class="imgSide">
         <img src="https://zupimages.net/up/19/21/3kzt.png" class="imageTutorial" style="margin-top:3%; margin-bottom:3%; height:15%; width:50%"/>
       </div>
       <p style="text-align:center">Nous vous souhaitons une bonne utilisation et n'oubliez pas de donner votre avis.</p>
-      <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe StatMess</p>
+      <p style="text-align:right; margin-top:2%; margin-bottom:1%; margin-right:3%">L'équipe SightMess</p>
     </div>
   </div>
       </div>
