--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -359,7 +359,7 @@
     <div class="suggestionCard" id="suggestionCardLeft">
       <h3>Renouez les liens</h3>
       <hr class="messageTitle">
-      <h4>StatMess vous suggère</h4>
+      <h4>SightMess vous suggère</h4>
       <div class="suggestBestContact">
         <img class = "imgPeople" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
         <h4 style="color:black;padding-left: 1vh; padding-right: 1vh;">{{suggestBestContact[0].name}}</h4>
@@ -377,7 +377,7 @@
         </div>
     </div>
     <button class="buttonMoreDetail" mat-button (click)="redirectConv()">
-      <input type="image" id="statmessLogoButton" src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
+      <input type="image" id="SightMessLogoButton" src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
       En savoir plus
     </button>
     <hr class="messageTitle" style="margin-top:5vh;">
