--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -206,7 +206,7 @@
     <hr class="overview">
     <p>Nous sommes trois étudiants de l’Ecole Centrale de Marseille. À l’origine, ce projet nous est venu par le constat que nous passions tous de longues heures sur Messenger, et pourtant nous ne savions pas combien. Nous ne savions pas qui étaient les personnes les plus influentes sur nos conversations, quelles étaient les personnes à qui nous parlions le plus à travers le temps, ou encore ce que nos habitudes de conversations pouvaient dire de nous. Nous avons alors cherché à donner sens à nos données Facebook, qui, sans algorithme, étaient illisibles.</p>
     <p>Ce projet n’a pas vocation à faire de l’argent, mais simplement de partager l’analyse que nous avons faite de nos messages et faire sourire en formalisant des informations que l’utilisateur ne pouvait que supposer par le passé.</p>
-    <p style="padding-bottom:2%">Si vous avez une quelconque remarque sur notre site, que vous l’avez apprécié ou détesté, ou que vous trouvez un bug ou une amélioration possible, n’hésitez pas à nous écrire à <a href="mailto:statsmess@gmail.com">statsmess@gmail.com</a> ! Nous serons ravis de vous lire.</p>
+    <p style="padding-bottom:2%">Si vous avez une quelconque remarque sur notre site, que vous l’avez apprécié ou détesté, ou que vous trouvez un bug ou une amélioration possible, n’hésitez pas à nous écrire à <a href="mailto:contact.sightmess@gmail.com">contact.sightmess@gmail.com</a> ! Nous serons ravis de vous lire.</p>
     <div class="linkedinBox">
       <a href="https://www.linkedin.com/in/hugo-pillet-a29689152/" style="text-decoration:none;" target="_blank">
       <div class="oneLinkedin">
