--- a/src/styles.scss
+++ b/src/styles.scss
@@ -119,7 +119,7 @@ $green-palette: igx-palette($primary: #09f,$secondary: #72da67, $surface: #333);
 }
 
 ::-webkit-scrollbar-thumb {
-    background: orange;
+    background: #fa8a2f;
     border-radius: 10px;
 }
 
