Carrousel test1 image own stat

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -23,8 +23,8 @@
 		<div class="untitled__slide">
 			<div class="untitled__slideBg"></div>
 			<div class="untitled__slideContent">
-				<span>Bienvenue sur</span> 
-				<span>StatMess</span>
+				<span>Explorez</span> 
+				<span>vos stats</span>
 			</div>
 		</div>
 		<div class="untitled__slide">
