--- a/src/app/file-drop-page/file-drop-page.component.scss
+++ b/src/app/file-drop-page/file-drop-page.component.scss
@@ -163,7 +163,7 @@ $color: #1A1837;
 $font: 'Abril Fatface', sans-serif;
 
 $slides: 4;
-$images: url(https://zupimages.net/up/19/21/e49r.png) url(https://zupimages.net/up/19/21/i9wr.png) url(https://zupimages.net/up/19/21/m0l3.png)   url(https://zupimages.net/up/19/21/0pur.png);
+$images: url(https://zupimages.net/up/19/23/8mj2.png) url(https://zupimages.net/up/19/23/8mj2.png) url(https://zupimages.net/up/19/23/8mj2.png)   url(https://zupimages.net/up/19/21/0pur.png);
 
 html, body{
 	width: 100vw;
@@ -702,7 +702,7 @@ hr.overview{
 // Select button 
 
 .buttonSelect {
-  background-color: rgb(250, 138, 47); 
+  background-color: rgb(255, 149, 61); 
   border: none;
   color: white;
   padding: 1% 2%;
