Couleur txt carrousel

--- a/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
+++ b/src/app/home-pannel-page/convs-pannel/convs-pannel.component.scss
@@ -318,7 +318,7 @@ code {
 body {
     width: 430px;
     margin: 0 auto;
-    background-color: #F7CAC9;
+    background-color: rgb(241, 223, 223);
     font-family: 'Raleway', sans-serif;
 }
 
