Ajout des pubs sans style

--- a/src/app/file-drop-page/file-drop-page.component.html
+++ b/src/app/file-drop-page/file-drop-page.component.html
@@ -199,7 +199,7 @@
   
 	<button class="buttonSelect">Selectionner votre dossier</button>
 	
-
+  <img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; margin-top:3vh; margin-bottom: 3vh; display: block;"/>
 
   <div class="qsn">
     <h2 style="text-align:center; padding-top:1%">Qui sommes nous ?</h2>
