--- a/src/app/home-pannel-page/home-pannel-page.component.html
+++ b/src/app/home-pannel-page/home-pannel-page.component.html
@@ -86,8 +86,12 @@
     </figure>
   </div>
   <hr style="margin-bottom:0;" class="overview">
-</div>
 
+  <div style="display:flex; flex-wrap: wrap; padding-top: 3vh;">
+    <img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; display: block;"/>
+    <img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; display: block;"/>
+  </div>
+</div>
 
 <div class="mainPannel">
   <app-own-stats-pannel [listFilesDico]="listFilesDico" *ngIf="isMyStats"></app-own-stats-pannel>
