--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -7,6 +7,10 @@
   <div class="spinner">
     <p>{{valeurChargement}}%</p>
   </div>
+</div>
+
+<img src="http://www.avocom971.fr/images2/bandeau-site-n.jpg" class="addGoogle" style="width:728px; height:90px; margin: auto; margin-top:3vh; margin-bottom: 3vh; display: block;"/>
+
 <div class="instruction">
   <h3>Quelques instructions :</h3>
   <p>- <b>Ne pas cliquer sur le bouton "Précédent" ou "Rafraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
@@ -14,5 +18,4 @@
   <p>- Consultez les <b>CGU</b> en bas à droite de la page pour plus d'informations.</p>
   <hr style="margin-bottom: 0.5%; margin-top: 0.5%;" class="overview">
   <h3 style="margin-right:auto; margin-left:auto; text-align:center;">Bonne utilisation et n'hésitez pas à donner votre avis !</h3>
-</div>
 </div>
