Boutton bubble correction

--- a/src/app/file-drop-page/loading-custom/loading-custom.component.html
+++ b/src/app/file-drop-page/loading-custom/loading-custom.component.html
@@ -10,7 +10,7 @@
 <div class="instruction">
   <h3>Quelques instructions :</h3>
   <p>- <b>Ne pas cliquer sur le bouton "Précédent" ou "Rafraichir" de votre navigateur</b> sinon vous reviendrez sur la première page du site.</p>
-  <p>- Utilisez le navigateur <b>Chrome</b>.</p>
+  <p>- Nous vous conseillons d'utiliser le navigateur <b>Chrome</b> pour éviter des problèmes d'affichage.</p>
   <p>- Consultez les <b>CGU</b> en bas à droite de la page pour plus d'informations.</p>
   <hr style="margin-bottom: 0.5%; margin-top: 0.5%;" class="overview">
   <h3 style="margin-right:auto; margin-left:auto; text-align:center;">Bonne utilisation et n'hésitez pas à donner votre avis !</h3>
