--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -961,3 +961,153 @@ label{
 .enteteTooltip h1{
   width:90%
 }
+
+// Button Back 
+
+$ease: cubic-bezier(.2,1,.3,1);
+  
+.wrapper {
+  position: absolute;
+  margin-left:5%;
+  transform: translate(-50%, -50%);
+  margin-top:2.2%;
+  
+  svg {
+    width: 100px;
+    height: 9vh;
+    margin: 0 2rem;
+    cursor: pointer;
+    overflow: visible;
+    polygon, path {
+      transition: all 0.5s $ease;
+      fill : #1A1837;
+    }
+    &:hover polygon, &:hover path {
+      transition: all 1s $ease;
+      fill: rgb(250, 138, 47);
+    }
+      
+    &:hover .arrow {
+      animation: arrow-anim 2.5s $ease infinite;
+    }
+    &:hover .arrow-fixed {
+      animation: arrow-fixed-anim 2.5s $ease infinite;
+    }
+  }
+}
+
+@keyframes arrow-anim {
+	0% {
+		opacity: 1;
+		transform: translateX(0);
+	}
+	5% {
+		transform: translateX(-0.1rem);
+	}
+	100% {
+		transform: translateX(1rem);
+		opacity: 0;
+	}
+}
+
+@keyframes arrow-fixed-anim {
+	5% {
+		opacity: 0;
+	}
+	20% {
+		opacity: 0.4;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.enteteTooltip{
+  display:flex
+}
+
+$softorange: #F4A259;
+$tomatored: #F25C66;
+$mediumblu: #1E272D;
+
+.close-container{
+  width: 50px;
+  height: 50px;
+  cursor: pointer;
+}
+
+.leftright{
+  height: 4px;
+  width: 50px;
+  position: absolute;
+  margin-top: 24px;
+  background-color: $softorange;
+  border-radius: 2px;
+  transform: rotate(45deg);
+  transition: all .3s ease-in;
+}
+
+.rightleft{
+  height: 4px;
+  width: 50px;
+  position: absolute;
+  margin-top: 24px;
+  background-color: $softorange;
+  border-radius: 2px;
+  transform: rotate(-45deg);
+  transition: all .3s ease-in;
+}
+
+.close label{
+  color: white;
+  font-family: Helvetica, Arial, sans-serif; 
+  font-size: .6em;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  transition: all .3s ease-in;
+  opacity: 0;
+}
+.close{
+  margin: 60px 0 0 5px;
+  position: absolute;
+}
+
+.close-container:hover .leftright{
+  transform: rotate(-45deg);
+  background-color: $tomatored;
+}
+.close-container:hover .rightleft{
+  transform: rotate(45deg);
+  background-color: $tomatored;
+}
+.close-container:hover label{
+  opacity: 1;
+}
+
+.tooltipFirstRun{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  background-color: rgba(26,24,55,0.9);
+  z-index: 10;
+  position: -webkit-sticky;
+  position: sticky;
+  left: 5%;
+  width: 40%;
+  color: #fff;
+  top: 10vh;
+  padding: 1%;
+  transition-property: opacity;
+  transition-duration: 1s;
+  transition-timing-function: linear;
+  margin-bottom: -20%;
+  margin-left:auto;
+  margin-right:auto;
+  width:80%;
+}
+
+.enteteTooltip h1{
+  width:90%
+}
+
+.reajustContent{
+  margin-top: -18vh;
+}
