--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,27 @@
             <p>Lancez vous</p>
           </button>
         </div>
-        <h2 class="version">Version α</h2> 
+        <h2 class="version">Version α</h2>
+        <ul id="c"> 
+		
+            
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+                              
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+                      
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            
+        
+          </ul>
       </div>
     </div>
 
