--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -57,8 +57,9 @@ img{
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center center; 
-  height: 56vh;
-  padding-top: 41vh;
+  height: 100%;
+  //padding-top: 41vh;
+  
 }
 .rectLaunch {
   background-color:rgba(38,64,83, 0.8);
@@ -130,6 +131,7 @@ $col) {
   overflow: hidden;
   border: 1px solid #000;
   transition: 0.5s;
+  top: 43%;
 
  button {
   font-weight: 300;
@@ -331,7 +333,70 @@ $ease: cubic-bezier(.2,1,.3,1);
 
 .version{
   position: relative;
-  top: 10vh;
+  //top: 10vh;
   margin-left: 100px;
   font-size: -webkit-xxx-large;
 }
+
+
+//Slider avis 
+
+
+/* SliderShow */
+
+*{
+	box-sizing: border-box;
+}
+
+
+
+body {
+	background: #121314;
+}
+
+body > ul {
+	position: absolute;
+	top: 50%;
+	width: 800px;
+	height: 45vh; 
+	left: 50%;
+	margin-left: -400px;
+	margin-top: -130px;
+}
+ 
+ul > li {
+    background : white; 
+		list-style-type: none;
+		position: absolute;
+		padding: 2.5vh;
+		//height: 45vh; 
+		opacity: 0;
+		text-align: center;
+    transition: 1s opacity; 
+    bottom:0;
+    display:flex;
+    box-shadow: 0 4px 9px #f1f1f4;
+    padding: 20px 0 25px 30px;
+    border-radius: 10px;
+    background-color: #ffffff;
+    max-width: 20%;
+}
+
+.li active {
+		opacity: 1;
+}
+  
+p {
+		font-family: sans-serif;
+		font-size: 13px;
+    color: #646566;
+		line-height: 1.5em;
+}
+
+strong { 
+    color: #fff;
+    font-weight: 700;
+		font-size: 60px; 
+    line-height: 100px; 
+}
+
