--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,6 +17,7 @@
 
     <div *ngIf="isReady">
       <div class="horizontalBar">
+        <img class="logo" src="../assets/img/logoSightmess.png"/>
         <h1 style="font-size : 3vh; margin-top:auto; margin-bottom:auto; margin-left:1%;">SightMess</h1>
       </div>
       <div class="cguPage" *ngIf="isCguVisible">
