--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,6 +2,12 @@ p {
   font-family:R 'Roboto', sans-serif;
 }
 
+.horizontalBar .logo{
+  width:3.5vh;
+  height:3.5vh;
+  margin-left: 1vw;
+}
+
 img{
   width : auto;
   height: 4vh;
