--- a/src/app/home-pannel-page/profil-pannel/profil-pannel.component.scss
+++ b/src/app/home-pannel-page/profil-pannel/profil-pannel.component.scss
@@ -91,7 +91,7 @@ b {
   font-size: 1.3em;
   color: white;
   width: 100%;
-  text-align: -webkit-center;
+  text-align: center;
   padding-block-start: 25%;
 }
 
