--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,23 +12,23 @@
           </button>
         </div>
         <h2 class="version">Version α</h2>
+        <p style="margin-top: 24%; margin-left: 1%; text-align:left; font-size: 2em;">Ils ont testé :</p>
         <ul id="c"> 
 		
-            
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
                               
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
                       
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
 
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
 
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
-            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
+            <li><img src="https://zupimages.net/up/19/23/6a29.jpg"/><div class="textAvis"><p class="nameAvis">Hugo Pillet</p><p class="avis">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p><p class="dateAvis">20/06/2019</p></div></li>
             
         
           </ul>
