--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -93,14 +93,14 @@ h1{
   margin-bottom:0.1%;
 }
 
-p{
+.button-container-2 p{
   background: -webkit-linear-gradient(rgb(250, 138, 47), rgb(214, 87, 28));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   text-align: center;
   margin-block-start: 0em;
   margin-block-end: 0em;
-  font-size:2em;
+  font-size:1em;
 }
 
 .rectLaunch:hover{
@@ -368,7 +368,7 @@ ul > li {
     background : white; 
 		list-style-type: none;
 		position: absolute;
-		padding: 2.5vh;
+		
 		//height: 45vh; 
 		opacity: 0;
 		text-align: center;
@@ -376,10 +376,12 @@ ul > li {
     bottom:0;
     display:flex;
     box-shadow: 0 4px 9px #f1f1f4;
-    padding: 20px 0 25px 30px;
+    
     border-radius: 10px;
     background-color: #ffffff;
     max-width: 20%;
+    margin-bottom : 1%;
+    margin-left:1%;
 }
 
 .li active {
@@ -399,4 +401,38 @@ strong {
 		font-size: 60px; 
     line-height: 100px; 
 }
+
+li > img{
+  border-radius: 100%;
+  margin-top:2%;
+  margin-left:1%;
+}
+
+
+.dateAvis{
+  text-align:right;
+  font-size:0.6em;
+  margin:0;
+}
+
+.nameAvis{
+  text-align:left;
+  font-weight:bold;
+  margin:0;
+}
+
+.avis{
+  text-align:left;
+  margin:0;
+}
+
+.textAvis{
+  padding:0 1% 0 2%;
+}
+
+
+
+
+
+
 
