--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,13 +2,7 @@ p {
   font-family:R 'Roboto', sans-serif;
 }
 
-img{
-  width : auto;
-  height: 4vh;
-  margin-right:0px;
-  margin-top: auto;
-  margin-bottom:auto;
-}
+
 .horizontalBar{
   display : flex;
   background-color:#1A1837;
@@ -53,7 +47,7 @@ img{
 }
 
 .cover {
-  background-image: url(https://www.nar.realtor/sites/default/files/styles/main_stage_image/public/bubble-chart-GettyImages-469874317-1300w-867h.png?itok=0vhgIEn4);
+  background-image: url(https://zupimages.net/up/19/23/xcsm.jpg);
   background-size:cover;
   background-repeat: no-repeat;
   background-position: center center; 
@@ -101,6 +95,7 @@ h1{
   margin-block-start: 0em;
   margin-block-end: 0em;
   font-size:1em;
+  
 }
 
 .rectLaunch:hover{
@@ -125,13 +120,13 @@ $col) {
 
 .button-container-2 {
   position: relative;
-  width: 20%;
   margin-right: auto;
   margin-left: auto;
   overflow: hidden;
-  border: 1px solid #000;
+  border: 1px solid #fff;
   transition: 0.5s;
-  top: 43%;
+  width: 390px;
+ 
 
  button {
   font-weight: 300;
@@ -375,13 +370,16 @@ ul > li {
     transition: 1s opacity; 
     bottom:0;
     display:flex;
-    box-shadow: 0 4px 9px #f1f1f4;
+    box-shadow: 0 4px 9px black;
     
     border-radius: 10px;
     background-color: #ffffff;
-    max-width: 20%;
-    margin-bottom : 1%;
+    width: 20%;
+    margin-bottom : 8px;
     margin-left:1%;
+    height:13%;
+    max-height: 150px;
+    min-width: 200px;
 }
 
 .li active {
@@ -389,7 +387,6 @@ ul > li {
 }
   
 p {
-		font-family: sans-serif;
 		font-size: 13px;
     color: #646566;
 		line-height: 1.5em;
@@ -406,13 +403,19 @@ li > img{
   border-radius: 100%;
   margin-top:2%;
   margin-left:1%;
+  width : auto;
+  height: 4vh;
+  margin-right:0px;
 }
 
 
 .dateAvis{
-  text-align:right;
   font-size:0.6em;
   margin:0;
+  bottom: 0;
+  position: absolute;
+  right: 1;
+  margin-right: 1.5%;
 }
 
 .nameAvis{
@@ -430,7 +433,29 @@ li > img{
   padding:0 1% 0 2%;
 }
 
+.testBox{
+  background: black;
+  opacity:0.5;
+  position: absolute;
+  width: 50%;
+  border-radius: 5px 5px 5px 0;
+  bottom: 0;
+  height: 20%;
+  max-height: 220px;
+  
+}
 
+.logoSightMess{
+  text-align:center;
+  
+}
+
+.logoSightMess img{
+  height: 30vh;
+  margin-top: 7%;
+  margin-bottom: 1%;
+  max-height: 400px;
+}
 
 
 
