--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.html
@@ -359,7 +359,7 @@
     <div class="suggestionCard" id="suggestionCardLeft">
       <h3>Renouez les liens</h3>
       <hr class="messageTitle">
-      <h4>StatMess vous suggère</h4>
+      <h4>SightMess vous suggère</h4>
       <div class="suggestBestContact">
         <img class = "imgPeople" src="https://image.flaticon.com/icons/svg/1256/1256650.svg"/>
         <h4 style="color:black;padding-left: 1vh; padding-right: 1vh;">{{suggestBestContact[0].name}}</h4>
@@ -377,7 +377,7 @@
         </div>
     </div>
     <button class="buttonMoreDetail" mat-button (click)="redirectConv()">
-      <input type="image" id="statmessLogoButton" src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
+      <input type="image" id="SightMessLogoButton" src="https://i.pinimg.com/originals/0b/73/51/0b7351f7b132512ea28fae9d5fff1bde.png"/>
       En savoir plus
     </button>
     <hr class="messageTitle" style="margin-top:5vh;">
@@ -656,7 +656,15 @@
 </div>
 
 <div class="mainStats" *ngIf="isFileOpen">
-  <button class="goBack" mat-button (click)="invertStat()"> ↜ </button>
+  <div class="wrapper" (click)="invertStat()" style="opacity:0">
+    <svg width="18px" height="17px" viewBox="0 0 18 17" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <g id="prev" transform="translate(8.500000, 8.500000) scale(-1, 1) translate(-8.500000, -8.500000)">
+            <polygon class="arrow" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+            <polygon class="arrow-fixed" points="16.3746667 8.33860465 7.76133333 15.3067621 6.904 14.3175671 14.2906667 8.34246869 6.908 2.42790698 7.76 1.43613596"></polygon>
+            <path d="M-1.48029737e-15,0.56157424 L-1.48029737e-15,16.1929159 L9.708,8.33860465 L-2.66453526e-15,0.56157424 L-1.48029737e-15,0.56157424 Z M1.33333333,3.30246869 L7.62533333,8.34246869 L1.33333333,13.4327013 L1.33333333,3.30246869 L1.33333333,3.30246869 Z"></path>
+        </g>
+    </svg>
+  </div>
   <app-one-conv-stats [fileConvToDisplay]="fileSelected" ></app-one-conv-stats>
 </div>
 
