--- a/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
+++ b/src/app/home-pannel-page/own-stats-pannel/own-stats-pannel.component.scss
@@ -450,6 +450,7 @@ h2 {
 .sideTexteMessageBox{
   background-color: rgb(255, 255, 255);
   text-align: center;
+  word-break: break-all;
 }
 
 .messageBox{
